Sprint 6 внесены правки после замечаний